updates name to Bryckroad Custom Theme

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- Theme Name:   Support Widget
+ Theme Name:   Bryckroad Custom Theme
  Theme URI:    http://bryckroad.com/
  Description:  Creates a support widget in Wordpress Dashboard
  Author:       Louis Riddle
