Update the description

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
  Theme Name:   Bryckroad Custom Theme
  Theme URI:    http://bryckroad.com/
- Description:  Creates a support widget in Wordpress Dashboard
+ Description:  A child theme for Hello by Elementor that includes custom styles, functions, and support for this website.
  Author:       Bryckroad Creative, Louis Riddle - Website Support Specialist
  Template:     hello-elementor
  Version:      1.0.1
